# RebelEngine

./: .clang-format  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT.txt  DONORS.md  LICENSE  README.md  SConstruct  copyright  gles_builders.py  methods.py  platform_methods.py  version.py
.github/: dependabot.yaml  release.yaml
core/: SCsub  array.cpp  array.h  bitfield_dynamic.cpp  bitfield_dynamic.h  class_db.cpp  class_db.h  color.cpp  color.h  color_names.inc  command_queue_mt.cpp  (+102 more)
platform/android/project/engine/: CMakeLists.txt  build.gradle
platform/android/project/engine/patches/: com.google.android.vending.expansion.downloader.patch  com.google.android.vending.licensing.patch
platform/android/project/engine/res/layout/: status_bar_ongoing_event_progress_bar.xml
platform/android/project/engine/src/com/google/android/vending/expansion/downloader/: DownloaderServiceMarshaller.java
platform/android/project/engine/src/com/rebeltoolbox/rebelengine/xr/regular/: RegularConfigChooser.java
platform/android/project/engine/src/main/java/com/google/android/vending/expansion/downloader/: SystemFacade.java
platform/android/project/engine/src/main/java/com/google/android/vending/expansion/downloader/impl/: DownloadThread.java
platform/android/project/engine/src/main/java/com/rebeltoolbox/rebelengine/input/: RebelInputHandler.java
platform/android/project/engine/src/main/java/com/rebeltoolbox/rebelengine/plugin/: RebelPlugin.java  UsedByRebel.java
platform/android/project/nativeSrcsConfigs/: CMakeLists.txt
(+4220 files in other folders)
